--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font awesome icons cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Styles.css -->
     <link rel="stylesheet" href="/src/styles.css">
     <title>Shopping Cart</title>
 </head>
 <body>
-   
+   <!-- Container -->
+   <div class="container">
+        <!-- navigation -->
+        <div class="nav-container">
+            <!-- logo container -->
+            <div class="logo-container">
+                <!-- logo -->
+                <img src="#" alt="logo">
+            </div>
+            <!-- nav links container -->
+            <div class="nav-links-container">
+                <ul id="navbar">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Shop</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- end of nav links -->
+        </div>
+        <!-- end of nav container -->
+        <!-- start of main comtainer -->
+        <div class="main-container">
+            <!-- finish here, idea is to have a image carrousel showing off clothing items -->
+        </div>
+   </div>
     
 
     <!-- index.js -->
