imageCarousel added but not tested

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,12 @@
         <!-- start of main comtainer -->
         <div class="main-container">
             <!-- finish here, idea is to have a image carrousel showing off clothing items -->
+            <div class="carousel-container">
+                <div class="carousel" id="imageCarousel">
+                    <!-- images will be added dynamically -->
+                   
+                </div>
+            </div>
         </div>
    </div>
     
