landing page layout 99% done

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,52 @@
                 </div>
             </div>
         </div>
+        <!-- footer -->
+        <div class="footer">
+            <div class="left-hand-side-footer">
+                <!-- links -->
+                <div class="footer-links">
+                    <ul id="left-hand-side-footer-links">
+                        <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                        <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                        <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                        <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                        <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="middle-footer">
+                <!-- links -->
+                <div class="footer-links">
+                    <ul id="middle-footer-links">
+                        <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                        <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                        <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                    </ul>
+                </div>
+                <!-- for newslettersubscription -->
+                <div class="middle-footer-subscribe-newsletter-container">
+                    <form action="#">
+                        <label for="#">Subscribe to our newsletter</label>
+                        <input type="email" name="" id="newsletter-input" placeholder="email@example.com">
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+            <div class="right-hand-side-footer">
+                <div class="social-icons">
+                    <!-- social icons -->
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-snapchat"></i></a>
+                </div>
+                <!-- Companies infomation -->
+                <div class="company-info">
+                    <!-- insert info later date -->
+                </div>
+            </div>
+        </div>
    </div>
     
 
