--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
             <div class="nav-links-container">
                 <ul id="navbar">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="#" class="nav-a">Home</a>
                     </li>
                     <li>
-                        <a href="#">Shop</a>
+                        <a href="#" class="nav-a">Shop</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="#" class="nav-a">About</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#" class="nav-a">Contact</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                        <a href="#"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
