need to sort out img size issue, and need to work on my responsivness

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- logo container -->
             <div class="logo-container">
                 <!-- logo -->
-                <img src="#" alt="logo">
+                <img src="/images/alphabet-word-images-1295383.svg" alt="logo">
             </div>
             <!-- nav links container -->
             <div class="nav-links-container">
@@ -49,6 +49,31 @@
                 <div class="carousel" id="imageCarousel">
                     <!-- images will be added dynamically -->
                    
+                </div>
+            </div>
+        </div>
+        <!-- Featured products -->
+        <div class="featured-products-container">
+            <div class="what-we-do-container">
+                <div class="what-we-do-card">
+                    <img src="/images/ship-6252319.svg" alt="">
+                    <span id="free-shipping-span"><p>Free Shipping</p></span>
+                </div>
+                <div class="what-we-do-card">
+                    <img src="#" alt="">
+                    <span><p>Online Order</p></span>
+                </div>
+                <div class="what-we-do-card">
+                    <img src="#" alt="">
+                    <span><p>Save Money</p></span>
+                </div>
+                <div class="what-we-do-card">
+                    <img src="#" alt="">
+                    <span><p>Promotions</p></span>
+                </div>
+                <div class="what-we-do-card">
+                    <img src="#" alt="">
+                    <span><p>24/7 Support</p></span>
                 </div>
             </div>
         </div>
