--- a/index.html
+++ b/index.html
@@ -60,21 +60,57 @@
                     <span id="free-shipping-span"><p>Free Shipping</p></span>
                 </div>
                 <div class="what-we-do-card">
-                    <img src="#" alt="">
-                    <span><p>Online Order</p></span>
+                    <img src="/images/basket-156835.svg" alt="">
+                    <span id="online-order-span"><p>Online Order</p></span>
                 </div>
                 <div class="what-we-do-card">
-                    <img src="#" alt="">
-                    <span><p>Save Money</p></span>
+                    <img src="/images/savings-box-161876.svg" id="piggy-bank" alt="">
+                    <span id="save-money-span"><p>Save Money</p></span>
                 </div>
                 <div class="what-we-do-card">
-                    <img src="#" alt="">
-                    <span><p>Promotions</p></span>
+                    <img src="/images/shopping-cart-309592.svg" id="shopping-cart-img">
+                    <span id="promo-span"><p>Promotions</p></span>
                 </div>
                 <div class="what-we-do-card">
-                    <img src="#" alt="">
-                    <span><p>24/7 Support</p></span>
+                    <img src="/images//call-center-7040784.svg">
+                    <span id="support-span"><p>24/7 Support</p></span>
                 </div>
+            </div>
+            <h1 id="featured-products-heading">Featured Products</h1>
+            <!-- product list -->
+            <div id="product-list">
+                <!-- Product list goes here -->
+                <div class="product" data-id="1" data-name="Product 1" data-price="20.00">
+                    <img src="/images/tobias-tullius-Fg15LdqpWrs-unsplash.jpg" alt="Product 1">
+                    <h3>Silk Jacket</h3>
+                    <p class="product-price">$20.00</p>
+                </div>
+                <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
+                    <img src="/images/milada-vigerova-p8Drpg_duLw-unsplash.jpg" alt="Product 2">
+                    <h3>Shawl</h3>
+                    <p class="product-price">$30.00</p>
+                </div>
+                <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
+                    <img src="/images/girl-with-red-hat-qyy6pmM2Hg8-unsplash.jpg" alt="Product 2">
+                    <h3>Tie Dye Jacket</h3>
+                    <p class="product-price">$38.00</p>
+                </div>
+                <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
+                    <img src="/images/hanna-zhyhar-RS9nsyy7QQM-unsplash.jpg" alt="Product 2">
+                    <h3>Good Vibes T-Shirt</h3>
+                    <p class="product-price">$27.00</p>
+                </div>
+                <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
+                    <img src="/images/cristofer-maximilian-AqLIkOzWDAk-unsplash.jpg" alt="Product 2">
+                    <h3>Plain T-Shirt</h3>
+                    <p class="product-price">$30.00</p>
+                </div>
+                <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
+                    <img src="images/kemal-alkan-_BDBEP0ePQc-unsplash.jpg" alt="Product 2">
+                    <h3>Denim Jacket</h3>
+                    <p class="product-price">$34.00</p>
+                </div>
+                <!-- Add more products as needed -->
             </div>
         </div>
         <!-- footer -->
