--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                     </div>
                     <div class="product-card-shopping-cart">
                         <p class="product-price">$20.00</p>
-                        <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        <span class="background-shopping-cart">
+                            <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        </span>
                     </div>  
                 </div>
                 <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
@@ -98,7 +100,9 @@
                     </div>
                     <div class="product-card-shopping-cart">
                         <p class="product-price">$24</p>
-                        <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        <span class="background-shopping-cart">
+                            <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        </span>   
                     </div>  
                 </div>
                 <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
@@ -109,7 +113,9 @@
                     </div>
                     <div class="product-card-shopping-cart">
                         <p class="product-price">$38</p>
-                        <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        <span class="background-shopping-cart">
+                            <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        </span>
                     </div>  
                 </div>
                 <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
@@ -120,7 +126,9 @@
                     </div>
                     <div class="product-card-shopping-cart">
                         <p class="product-price">$14.00</p>
-                        <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        <span class="background-shopping-cart">
+                            <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        </span>
                     </div>  
                 </div>
                 <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
@@ -131,7 +139,9 @@
                     </div>
                     <div class="product-card-shopping-cart">
                         <p class="product-price">$10.00</p>
-                        <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        <span class="background-shopping-cart">
+                            <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        </span>
                     </div>  
                 </div>
                 <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
@@ -142,7 +152,9 @@
                     </div>
                     <div class="product-card-shopping-cart">
                         <p class="product-price">$28.00</p>
-                        <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        <span class="background-shopping-cart">
+                            <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        </span>
                     </div>  
                 </div>
                 <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
@@ -153,7 +165,9 @@
                     </div>
                     <div class="product-card-shopping-cart">
                         <p class="product-price">$23.00</p>
-                        <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        <span class="background-shopping-cart">
+                            <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        </span>
                     </div>  
                 </div>
                 <div class="product" data-id="2" data-name="Product 2" data-price="30.00">
@@ -164,7 +178,9 @@
                     </div>
                     <div class="product-card-shopping-cart">
                         <p class="product-price">$26.00</p>
-                        <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        <span class="background-shopping-cart">
+                            <a href=""><i class="fa-solid fa-cart-shopping product-cart" id="icon-shopping-cart"></i></a>
+                        </span>
                     </div>  
                 </div>
                 <!-- Add more products as needed -->
@@ -178,7 +194,7 @@
             </div>
             
         </div>
-
+        <!-- Start a new arrivals section -->
 
 
         <!-- footer -->
