added . to imgs as github pages wont load them

--- a/about/about.html
+++ b/about/about.html
@@ -6,7 +6,7 @@
      <!-- Font awesome icons cdn -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
      <!-- Shop css -->
-     <link rel="stylesheet" href="/about/about.css">
+     <link rel="stylesheet" href="./about/about.css">
     <title>About</title>
 </head>
 <body>
@@ -16,19 +16,19 @@
             <!-- logo container -->
             <div class="logo-container">
                 <!-- logo -->
-                <img src="/images/alphabet-word-images-1295383.svg" alt="logo">
+                <img src="./images/alphabet-word-images-1295383.svg" alt="logo">
             </div>
             <!-- nav links container -->
             <div class="nav-links-container">
                 <ul id="navbar">
                     <li>
-                        <a href="/index.html" class="nav-a">Home</a>
+                        <a href="./index.html" class="nav-a">Home</a>
                     </li>
                     <li>
-                        <a href="/shop/shop.html" class="nav-a">Shop</a>
+                        <a href="./shop/shop.html" class="nav-a">Shop</a>
                     </li>
                     <li>
-                        <a href="/about/about.html" class="nav-a">About</a>
+                        <a href="./about/about.html" class="nav-a">About</a>
                     </li>
                     <li>
                         <a href="#" class="nav-a">Contact</a>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="know-us-container">
-            <img src="/images/knowusimg.jpg" alt="about-us">
+            <img src="./images/knowusimg.jpg" alt="about-us">
             <div class="text-overlay">
                 <p id="know-us-text">LEARN ABOUT US</p>
             </div>
@@ -51,7 +51,7 @@
         <!-- About us section -->
         <section id="about-us-section">
             <div class="about-us-img">
-                <img src="/images/store-4156934.svg" alt="store">
+                <img src="./images/store-4156934.svg" alt="store">
             </div>
             <!-- text side -->
             <div class="about-us-text">
@@ -64,7 +64,7 @@
         <section id="our-team-section">
              <!-- Our Team -->
              <div class="our-team-img">
-                <img src="/images/community-3245739.svg" alt="our team img">
+                <img src="./images/community-3245739.svg" alt="our team img">
             </div>
 
             <div class="about-us-text">
@@ -79,7 +79,7 @@
         <section id="our-team-section">
             <!-- Our Team -->
             <div class="our-team-img">
-               <img src="/images/buy-2025564.svg" alt="what we do">
+               <img src="./images/buy-2025564.svg" alt="what we do">
            </div>
 
            <div class="about-us-text">
