--- a/shop/shop.html
+++ b/shop/shop.html
@@ -89,7 +89,7 @@
 
                 <a href="#" class="product-link">
                     <div class="product" data-id="3" data-name="Product 3" data-price="38.00">
-                        <img src="./images/girl-with-red-hat-qyy6pmM2Hg8-unsplash.jpg" alt="Product 3">
+                        <img src="/images/girl-with-red-hat-qyy6pmM2Hg8-unsplash.jpg" alt="Product 3">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Tye-Dye Jacket</h3></a>
                             
