contact page done

--- a/about/about.html
+++ b/about/about.html
@@ -31,10 +31,10 @@
                         <a href="/about/about.html" class="nav-a">About</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-a">Contact</a>
+                        <a href="/contact/contact.html" class="nav-a">Contact</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
+                        <a href="/contact/contact.html"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
