--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a href="./about/about.html" class="nav-a">About</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-a">Contact</a>
+                        <a href="/contact/contact.html" class="nav-a">Contact</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
