--- a/public/product.html
+++ b/public/product.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Jquery script cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Font awesome icons cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Styles.css -->
@@ -24,7 +26,7 @@
             <div class="nav-links-container">
                 <ul id="navbar">
                     <li>
-                        <a href="/index.html" class="nav-a">Home</a>
+                        <a href="/src/index.html" class="nav-a">Home</a>
                     </li>
                     <li>
                         <a href="/shop/shop.html" class="nav-a">Shop</a>
@@ -44,33 +46,7 @@
         </div>
         <!-- end of nav container -->
         <div class="product-layout-container">
-            <!-- img side -->
-            <div class="img-layout">
-                <img src="#" alt="">
-            </div>
-            <div class="text-layout">
-                <h5>Name Of Product Here</h5>
-                <h6>Price Of Product</h6>
-                <!-- Size of product input -->
-                <form>
-                    <label for="dropdown">Select an option:</label>
-                    <select id="dropdown" name="dropdown">
-                      <option value="option1">S</option>
-                      <option value="option2">M</option>
-                      <option value="option3">L</option>
-                    </select>
-                    <div class="add-to-cart-layout">
-                          <!-- Quantity -->
-                    <input type="number"  name="quantity" id="quantity-input"/>
-                    <!-- Add to cart -->
-                    <button type="submit">Add To Cart</button>
-                    </div>
-                </form>
-                <!-- Product details -->
-                <p id="product-details-heading">Product Details</p>
-                <p id="product-details-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam eveniet animi nobis perferendis, iusto nulla omnis voluptates perspiciatis minus, nemo officia delectus fugit expedita quod quia ab alias similique. Nostrum omnis sed mollitia quia voluptates?</p>
-
-            </div>
+          
         </div>
     </div>
     
