checkout page working on it

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -33,7 +33,7 @@
                         <a href="/contact/contact.html" class="nav-a">Contact</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
+                        <a href="/checkout/checkout.html"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
