--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -8,14 +8,12 @@
     <!-- Font awesome icons cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Styles.css -->
-    <link rel="stylesheet" href="product.css">
-    <title>Product Page</title>
+    <link rel="stylesheet" href="/checkout/checkout.css">
+    <title>Checkout</title>
 </head>
 <body>
-
-    <!-- container -->
     <div class="container">
-        <!-- navigation -->
+        <!-- Nav container -->
         <div class="nav-container">
             <!-- logo container -->
             <div class="logo-container">
@@ -38,18 +36,18 @@
                         <a href="/contact/contact.html" class="nav-a">Contact</a>
                     </li>
                     <li>
-                        <a href="/checkout/checkout.html"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
+                        <a href="/contact/contact.html"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
             <!-- end of nav links -->
         </div>
-        <!-- end of nav container -->
-        <div class="product-layout-container">
-          
+        <div class="checkout-icon" id="checkout-container">
+            <!-- This element will dynamically show the number of items in the cart -->
         </div>
     </div>
-    
-    <script src="product.js"></script>
+
+
+    <script src="/checkout/checkout.js"></script>
 </body>
 </html>
