checkout functionality working

--- a/src/index.html
+++ b/src/index.html
@@ -333,7 +333,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="15" data-name="Product 15" data-price="$11.00" data-image="/images/img7.jpg">
+                    <div class="product" data-id="15" data-name="Tank Top" data-price="$11.00" data-image="/images/img7.jpg">
                         <img src="/images/img7.jpg" alt="Product 15">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Tank Top</h3></a>
