--- a/checkout/checkout.html
+++ b/checkout/checkout.html
@@ -45,7 +45,76 @@
         <div class="checkout-icon" id="checkout-container">
             <!-- This element will dynamically show the number of items in the cart -->
         </div>
+
+        <!-- Newsletter -->
+     <div class="middle-footer-subscribe-newsletter-container">
+        <div class="form-layout-text">
+            <h4>Subscribe to our newsletter</h4>
+            <p>Dont miss out on anything, subscribe to our monthly newsletter!</p>
+        </div>
+        <div class="form-layout">
+            <form action="#" id="newsletter-form">
+                <input type="email" name="" id="newsletter-input" placeholder="email@example.com">
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+        <!-- Dont forget to add functionality to the form -->
     </div>
+
+    <!-- footer -->
+    <div class="footer">
+        <div class="left-hand-side-footer">
+
+            <h5>About</h5>
+
+            <!-- links -->
+            <div class="footer-links">
+                <ul id="left-hand-side-footer-links">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Delivery Information</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="middle-footer">
+
+            <h5>My Account</h5>
+
+            <!-- links -->
+            <div class="footer-links">
+                <ul id="middle-footer-links">
+                    <li><a href="#">Sign In</a></li>
+                    <li><a href="#">View Cart</a></li>
+                    <li><a href="#">My Wishlist</a></li>
+                    <li><a href="#">Help</a></li>
+                </ul>
+            </div>
+                
+            <!-- social icons -->
+            <div class="social-icons">
+                <!-- social icons -->
+                <a href="#"><i class="fa-brands fa-facebook facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram insta"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-snapchat snapchat"></i></a>
+            </div>
+        </div>
+
+        <div class="company-info">
+            <!-- insert info later date -->
+            <h5>Contact</h5>
+            <p><span class="company-span">Address: </span>570 Wellington Road, Street 6, San Francisco</p>
+            <p><span class="company-span">Phone: </span>+01 6666 567 /(+91) 01 2345 6789</p>
+            <p><span class="company-span">Hours: </span>10.00 - 18.00. Mon - Sat</p>
+        </div>
+
+</div>
+    </div>
+
+     
 
 
     <script src="/checkout/checkout.js"></script>
