--- a/shop/shop.html
+++ b/shop/shop.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Jquery script cdn -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Font awesome icons cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Shop css -->
@@ -34,7 +36,7 @@
                         <a href="/contact/contact.html" class="nav-a">Contact</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
+                        <a href="/checkout/checkout.html"><i class="fa-solid fa-cart-shopping nav-a" id="icon-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +58,7 @@
             <div id="product-list">
                 <!-- Product list goes here -->
                 <a href="#" class="product-link">
-                    <div class="product" data-id="1" data-name="Product 1" data-price="20.00">
+                    <div class="product" data-id="1" data-name="Silk Jacket" data-price="$20.00" data-image="/images/tobias-tullius-Fg15LdqpWrs-unsplash.jpg">
                         <img src="/images/tobias-tullius-Fg15LdqpWrs-unsplash.jpg" alt="Product 1">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Silk Jacket</h3></a>
@@ -72,7 +74,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="2" data-name="Product 2" data-price="24.00">
+                    <div class="product" data-id="2" data-name="Shawl" data-price="$24.00" data-image="/images/milada-vigerova-p8Drpg_duLw-unsplash.jpg">
                         <img src="/images/milada-vigerova-p8Drpg_duLw-unsplash.jpg" alt="Product 2">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Shawl</h3></a>
@@ -88,7 +90,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="3" data-name="Product 3" data-price="38.00">
+                    <div class="product" data-id="3" data-name="Tye-Dye Jacket" data-price="$38.00" data-image="/images/girl-with-red-hat-qyy6pmM2Hg8-unsplash.jpg">
                         <img src="/images/girl-with-red-hat-qyy6pmM2Hg8-unsplash.jpg" alt="Product 3">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Tye-Dye Jacket</h3></a>
@@ -104,7 +106,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="4" data-name="Product 4" data-price="14.00">
+                    <div class="product" data-id="4" data-name="T-Shirt" data-price="$14" data-image="/images/hanna-zhyhar-RS9nsyy7QQM-unsplash.jpg">
                         <img src="/images/hanna-zhyhar-RS9nsyy7QQM-unsplash.jpg" alt="Product 4">
                         <div class="price-and-product-link">
                             <a href="#"><h3>T-Shirt</h3></a>
@@ -120,7 +122,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="5" data-name="Product 5" data-price="10.00">
+                    <div class="product" data-id="5" data-name="Plain T-Shirt" data-price="$10.00" data-image="/images/cristofer-maximilian-AqLIkOzWDAk-unsplash.jpg">
                         <img src="/images/cristofer-maximilian-AqLIkOzWDAk-unsplash.jpg" alt="Product 5">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Plain T-Shirt</h3></a>
@@ -136,7 +138,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="6" data-name="Product 6" data-price="28.00">
+                    <div class="product" data-id="6" data-name="Denim Jacket" data-price="$28.00" data-image="/images/kemal-alkan-_BDBEP0ePQc-unsplash.jpg">
                         <img src="/images/kemal-alkan-_BDBEP0ePQc-unsplash.jpg" alt="Product 6">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Denim Jacket</h3></a>
@@ -152,7 +154,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="7" data-name="Product 7" data-price="23.00">
+                    <div class="product" data-id="7" data-name="Cotton Shirt" data-price="$23.00" data-image="/images/bree-anne-Mtmz20AWrhk-unsplash.jpg">
                         <img src="/images/bree-anne-Mtmz20AWrhk-unsplash.jpg" alt="Product 7">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Cotton Shirt</h3></a>
@@ -168,7 +170,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="8" data-name="Product 8" data-price="26.00">
+                    <div class="product" data-id="8" data-name="Three Quarter Jeans" data-price="$26.00" data-image="/images/matthew-moloney-YeGao3uk8kI-unsplash.jpg">
                         <img src="/images/matthew-moloney-YeGao3uk8kI-unsplash.jpg" alt="Product 8">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Three Quarter Jeans</h3></a>
@@ -184,7 +186,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="9" data-name="Product 9" data-price="48.00">
+                    <div class="product" data-id="9" data-name="Lumberjack Shirt" data-price="$48.00" data-image="/images/img1.jpg">
                         <img src="/images/img1.jpg" alt="Product 9">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Lumberjack Shirt</h3></a>
@@ -200,7 +202,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="10" data-name="Product 10" data-price="24.00">
+                    <div class="product" data-id="10" data-name="Dalmation Overshirt" data-price="$24.00" data-image="/images/img2.jpg">
                         <img src="/images/img2.jpg" alt="Product 10">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Dalmation Overshirt</h3></a>
@@ -216,7 +218,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="11" data-name="Product 11" data-price="12.00">
+                    <div class="product" data-id="11" data-name="High Heels" data-price="$12.00" data-image="/images/img3.jpg">
                         <img src="/images/img3.jpg" alt="Product 11">
                         <div class="price-and-product-link">
                             <a href="#"><h3>High Heels</h3></a>
@@ -232,7 +234,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="12" data-name="Product 12" data-price="36.00">
+                    <div class="product" data-id="12" data-name="Branded Jumpers" data-price="$36.00" data-image="/images/testimg4.jpg">
                         <img src="/images/testimg4.jpg" alt="Product 12">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Branded Jumpers</h3></a>
@@ -248,7 +250,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="13" data-name="Product 13" data-price="26.50">
+                    <div class="product" data-id="13" data-name="Silk Shirts" data-price="$26.50" data-image="/images/img5.jpg">
                         <img src="/images/img5.jpg" alt="Product 13">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Silk Shirts</h3></a>
@@ -264,7 +266,7 @@
                 </a>
                 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="14" data-name="Product 14" data-price="14.99">
+                    <div class="product" data-id="14" data-name="Dungarees" data-price="$14.99" data-image="/images/img6.jpg">
                         <img src="/images/img6.jpg" alt="Product 14">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Dungarees</h3></a>
@@ -280,7 +282,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="15" data-name="Product 15" data-price="11.00">
+                    <div class="product" data-id="15" data-name="Tank Top" data-price="$11.00" data-image="/images/img7.jpg">
                         <img src="/images/img7.jpg" alt="Product 15">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Tank Top</h3></a>
@@ -296,7 +298,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="16" data-name="Product 16" data-price="26.00">
+                    <div class="product" data-id="16" data-name="Red Dotted Dress" data-price="$26.00" data-image="/images/img8.jpg">
                         <img src="/images/img8.jpg" alt="Product 16">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Red Dotted Dress</h3></a>
@@ -312,7 +314,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="17" data-name="Product 17" data-price="23.00">
+                    <div class="product" data-id="17" data-name="Smart Shirt" data-price="$23.00" data-image="/images/testimg7.jpg">
                         <img src="/images/testimg7.jpg" alt="Product 17">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Smart Shirt</h3></a>
@@ -328,7 +330,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="18" data-name="Product 18" data-price="23.00">
+                    <div class="product" data-id="18" data-name="Light Dot Shirt" data-price="$23.00" data-image="/images/testimg8.jpg">
                         <img src="/images/testimg8.jpg" alt="Product 18">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Light Dot Shirt</h3></a>
@@ -344,7 +346,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="19" data-name="Product 19" data-price="23.00">
+                    <div class="product" data-id="19" data-name="Branded T-Shirt" data-price="$23.00" data-image="/images/testimg9.jpg">
                         <img src="/images/testimg9.jpg" alt="Product 19">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Branded T-Shirt</h3></a>
@@ -360,7 +362,7 @@
                 </a>
 
                 <a href="#" class="product-link">
-                    <div class="product" data-id="20" data-name="Product 20" data-price="23.00">
+                    <div class="product" data-id="20" data-name="Artsy" data-price="$23.00" data-image="/images/testimg10.jpg">
                         <img src="/images/testimg10.jpg" alt="Product 20">
                         <div class="price-and-product-link">
                             <a href="#"><h3>Artsy</h3></a>
@@ -449,6 +451,9 @@
     
     </div>
 
-    <script src="./shop/shop.js"></script>
+    <script src="/shop/shop.js"></script>
+    <script src="/src/script.js"></script>
+    <script src="/public/product.js"></script>
+    <script src="/checkout/checkout.js"></script>
 </body>
 </html>
