newsletter basic subscription code sorted and working no backend as practice

--- a/src/index.html
+++ b/src/index.html
@@ -440,5 +440,6 @@
     <!-- index.js -->
     <script src="/src/index.js"></script>
     <script src="/src/script.js"></script>
+    <script src="/src/newsletter.js"></script>
 </body>
 </html>
