--- a/shop/shop.html
+++ b/shop/shop.html
@@ -455,5 +455,6 @@
     <script src="/src/script.js"></script>
     <script src="/public/product.js"></script>
     <script src="/checkout/checkout.js"></script>
+    <script src="/src/newsletter.js"></script>
 </body>
 </html>
