need to fix display grid error

--- a/src/index.html
+++ b/src/index.html
@@ -385,7 +385,7 @@
 
         <!-- footer -->
         <div class="footer">
-            <div class="left-hand-side-footer">
+            <div class="left-hand-side-footer spacing-footer">
 
                 <h5>About</h5>
 
@@ -401,7 +401,7 @@
                 </div>
             </div>
 
-            <div class="middle-footer">
+            <div class="middle-footer spacing-footer">
 
                 <h5>My Account</h5>
 
@@ -425,7 +425,7 @@
                 </div>
             </div>
 
-            <div class="company-info">
+            <div class="company-info spacing-footer">
                 <!-- insert info later date -->
                 <h5>Contact</h5>
                 <p><span class="company-span">Address: </span>570 Wellington Road, Street 6, San Francisco</p>
