--- a/public/product.html
+++ b/public/product.html
@@ -26,7 +26,7 @@
             <div class="nav-links-container">
                 <ul id="navbar">
                     <li>
-                        <a href="/src/index.html" class="nav-a">Home</a>
+                        <a href="/index.html" class="nav-a">Home</a>
                     </li>
                     <li>
                         <a href="/shop/shop.html" class="nav-a">Shop</a>
